kubernetes/gatewayapi/http-to-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https
  namespace: gateway-system
spec:
  parentRefs:
    - name: main-gateway
      sectionName: http

  hostnames:
    - "*.k8s.lab"

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
